--- a/Aplicacion-Web-ASP/pokedex-ASP/pokedex-ASP.csproj
+++ b/Aplicacion-Web-ASP/pokedex-ASP/pokedex-ASP.csproj
@@ -76,6 +76,7 @@
     <Content Include="FormularioPokemon.aspx" />
     <Content Include="Ejemplos%28DDL y cargar imagen%29\imagenConUrl.aspx" />
     <Content Include="ListaPokemons.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +142,13 @@
     </Compile>
     <Compile Include="ListaPokemons.aspx.designer.cs">
       <DependentUpon>ListaPokemons.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Master.Master.cs">
       <DependentUpon>Master.Master</DependentUpon>
