--- a/Aplicacion-Web-ASP/negocio/negocio.csproj
+++ b/Aplicacion-Web-ASP/negocio/negocio.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="ElementoNegocio.cs" />
+    <Compile Include="EmailService.cs" />
+    <Compile Include="EntrenadorNegocio.cs" />
     <Compile Include="PokemonNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioNegocio.cs" />
